# APIManager

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: PACKAGING.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: providers.tsx  router.tsx
src/app/layout/: app-shell.tsx  sidebar.tsx
src/components/api/: api-detail-form.tsx  api-empty-state.tsx  api-list-item.tsx  api-list.tsx  api-parameters-form.tsx  api-website-links-editor.tsx  current-api-summary.tsx
src/components/chat/: chat-session-list.tsx  message-bubble.tsx  message-input.tsx
src/components/common/: page-header.tsx
src/components/ui/: button.tsx  card.tsx  separator.tsx
src/lib/: clipboard.ts  errors.ts
src/modules/api/: api-context.tsx  api-import-export.ts  api-validation.ts
src/modules/chat/: chat-storage.ts  chat.service.ts
src/modules/provider/: anthropic.adapter.ts  openai-compatible.adapter.ts  provider-connection.service.ts  provider-models.service.ts  provider-registry.ts  provider.types.ts  streaming.ts
src/pages/: api-management-page.tsx  chat-page.tsx  webview-page.tsx
src/styles/: globals.css
src/types/: api-config.ts  chat.ts  provider.ts
