[package]
name = "api-manager"
version = "0.1.0"
description = "Windows desktop app for managing LLM API providers"
authors = ["Codex"]
edition = "2021"

[lib]
name = "api_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
